--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="pfp.jpg" width="100" height="100"></td>
+      <td><img src="images/pfp.jpg" width="100" height="100"></td>
       <td>
         <h1>JANUARY</h1>
         <p><em>Creator and CEO of <strong>Dope Love Music</strong></em></p>
